--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,12 +46,21 @@ img {
 
 }
 
+.row {
+  padding: 0;
+  margin: 0;
+} 
+
+.logo img {
+  padding: 20px 0 0 20px;
+}
+
 .nav {
   width: 100%;
   visibility: hidden;
   height: 0;
-  text-align: center;
-  padding-bottom: 10px;
+  text-align: start;
+  padding: 0 0 20px 20px;
 }
 
 .nav-item {
@@ -84,7 +93,7 @@ img {
   transition: opacity 250ms ease;
   position: absolute;
   right: 5%;
-  top: 35px;
+  top: 60px;
 }
 
 .nav-toggle:focus,
@@ -166,7 +175,7 @@ img {
   background-color: #3D4044;
 }
 .swiper {
-  height: 70vh;
+  height: 50vh;
   width: 100%;
 }
 
@@ -222,7 +231,7 @@ footer img {
 }
 
 
-@media only screen and (min-width: 800px) {
+@media only screen and (min-width: 830px) {
   
   .container {
     width: 90%;
@@ -238,18 +247,17 @@ footer img {
     padding: 0 5px;
   }
 
-/* .who-col {
-  justify-content: space-evenly;
-} */
-
   .wrap {
     flex-wrap: wrap;
     justify-content: space-between;
   }
 
   .logo img {
-    width: 400px;
+    width: 500px;
+    padding: 20px 0 20px 20px;
   }
+
+
 
   .nav-toggle {
     display: none;
@@ -261,6 +269,7 @@ footer img {
       justify-content: end;
       align-items: center;
       height: auto;
+      padding: 0;
   }
 
   .nav-list {
