--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,7 @@ h1, h2, h3, h4 {
   font-family: 'Quicksand', sans-serif;
   color: #3D4044;
   font-weight: 400;
+  text-transform: capitalize;
 }
 
 section {
@@ -27,6 +28,11 @@ section {
 
 img {
   max-width: 100%;
+}
+
+main {
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .lh-green {
@@ -43,13 +49,22 @@ img {
 .header {
   background-color: #3D4044;
   color: #FAFAFA;
-
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .row {
   padding: 0;
   margin: 0;
 } 
+
+.card-image {
+  box-shadow: 10px 10px 8px #3d40448f;
+}
+
+.col h2 {
+  margin-top: 20px;
+}
 
 .logo img {
   padding: 20px 0 0 20px;
@@ -172,29 +187,59 @@ img {
 
 .hero {
   padding: 0;
-  background-color: #3D4044;
+  background-color: rgb(219, 219, 220);
+  position: relative;
 }
+
 .swiper {
   height: 50vh;
   width: 100%;
+  max-width: 1200px;
 }
-
 .swipper-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 0;
+  padding: 0;
 }
 
 .swiper-slide {
   background-size:cover;
   background-position: center;
+  overflow: hidden;
   font-size: 60px;
   color: #FAFAFA;
 }
 
-.swiper-slide img {
+.swiper-zoom-container>img {
   display: block;
   width: 100%;
+  object-fit: cover !important;
+}
+
+.hero-heading {
+  color: #14cdd3;
+  background-color: #3d40448f;
+  font-size: 2.5rem;
+  margin: 0 25%;
+  text-transform: capitalize;
+  padding: 20px;
+  border-radius: 50px;
+  text-align: center;
+  position: absolute;
+  top: 19vh;
+  width: 50%;
+  z-index: 10;
+}
+
+.section-title {
+  font-size: 1.5em;
+  background-color: #3d40448f;
+  color: #FAFAFA;
+  display: inline-block;
+  padding: .7em;
+  border-radius: 45px;
 }
 
 /* Who Section */
@@ -224,6 +269,8 @@ footer {
   background-color: #3D4044;
   color: #FAFAFA;
   height: 30vh;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 footer img {
@@ -231,7 +278,7 @@ footer img {
 }
 
 
-@media only screen and (min-width: 830px) {
+@media only screen and (min-width: 850px) {
   
   .container {
     width: 90%;
@@ -274,5 +321,14 @@ footer img {
 
   .nav-list {
     display: flex;
+
+  }
+
+
+}
+
+@media only screen and (min-width: 1000px) {
+  .nav-link {
+    font-size: 1.1em;
   }
 }
