--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -280,10 +280,38 @@ main {
   background-color: lightgoldenrodyellow;
 }
 
+/* Contact form */
 .contact {
   text-align: center;
   background-color: lightslategrey;
 }
+
+.contact-details {
+  width: 60%;
+  margin: 0 auto;
+
+}
+.contact-details input {
+  
+  width: 100%;
+  padding: 5px;
+  margin: 5px 0;
+}
+
+.contact-details label {
+  display: inline-block;
+  width: 100%;
+  text-align: left;
+
+}
+
+.contact-details textarea {
+  width: 100%;
+  margin-top: 15px;
+}
+
+
+/* Footer */
 
 footer {
   background-color: #3D4044;
@@ -296,6 +324,8 @@ footer {
 footer img {
 
 }
+
+
 
 
 @media only screen and (min-width: 850px) {
